resolve table caption & URL link contrast issues

--- a/themes/hugo_theme_robust/static/css/styles.css
+++ b/themes/hugo_theme_robust/static/css/styles.css
@@ -12,6 +12,10 @@ a {
  color: #003366; 
 }
 
+caption {
+  color: #595959;
+}
+
 #customBody{
   padding-top:10px;
 }
@@ -730,7 +734,7 @@ article.single .body {
 }
 
 article.single .body a {
-  color: #78909c;
+  color: #0051a2;
   text-decoration: underline;
 }
 
